Изменил некоторые классы в программе удалил ненужные классы из за обнаруженных ошибок