@@ -3,6 +3,7 @@ package servlet;
 import java.io.IOException;
 import java.sql.SQLException;
 import java.util.List;
+import java.util.stream.Collectors;
 
 import com.google.gson.Gson;
 import dao.UserDao;
@@ -10,13 +11,9 @@ import jakarta.servlet.annotation.WebServlet;
 import jakarta.servlet.http.HttpServlet;
 import jakarta.servlet.http.HttpServletRequest;
 import jakarta.servlet.http.HttpServletResponse;
-import lombok.AllArgsConstructor;
 import model.dto.UserDto;
 import model.entity.User;
-import org.slf4j.Logger;
-import org.slf4j.LoggerFactory;
 
-import static constants.ServletConstants.*;
 import static util.ServletUtils.writeResponse;
 
 /**
@@ -24,12 +21,9 @@ import static util.ServletUtils.writeResponse;
  * Поддерживает операции получения, добавления, обновления и удаления пользователей.
  */
 @WebServlet("/users")
-@AllArgsConstructor
 public class UserServlet extends HttpServlet {
-    private static final Logger logger = LoggerFactory.getLogger(UserServlet.class);
-
-    private UserDao userDao;
-    private Gson gson;
+    private final UserDao userDao = new UserDao();
+    private final Gson gson = new Gson();
 
     /**
      * Обрабатывает HTTP GET запросы для получения одного пользователя по ID или всех пользователей.
@@ -40,7 +34,7 @@ public class UserServlet extends HttpServlet {
      * @throws IOException при ошибках ввода/вывода.
      */
     @Override
-    public void doGet(HttpServletRequest request, HttpServletResponse response) throws IOException {
+    protected void doGet(HttpServletRequest request, HttpServletResponse response) throws IOException {
         String userId = request.getParameter("id");
         try {
             if (userId != null) {
@@ -49,24 +43,18 @@ public class UserServlet extends HttpServlet {
                     UserDto userDto = new UserDto(user.getId(), user.getUsername(), user.getEmail());
                     writeResponse(response, gson.toJson(userDto), HttpServletResponse.SC_OK);
                 } else {
-                    writeResponse(response, USER_NOT_FOUND, HttpServletResponse.SC_NOT_FOUND);
+                    writeResponse(response, "Пользователь не найден", HttpServletResponse.SC_NOT_FOUND);
                 }
             } else {
                 List<User> users = userDao.getAllUsers();
                 List<UserDto> userDtos = users.stream()
                         .map(u -> new UserDto(u.getId(), u.getUsername(), u.getEmail()))
-                        .toList();
+                        .collect(Collectors.toList());
                 writeResponse(response, gson.toJson(userDtos), HttpServletResponse.SC_OK);
             }
-        } catch (NumberFormatException e) {
-            writeResponse(response, "Идентификатор пользователя должен быть действительным целым числом.",
-                    HttpServletResponse.SC_BAD_REQUEST);
         } catch (SQLException e) {
-            writeResponse(response, "Ошибка доступа к базе данных", HttpServletResponse.SC_INTERNAL_SERVER_ERROR);
-            logger.error("Ошибка доступа к базе данных при попытке получить пользователя по идентификатору", e);
-        } catch (Exception e) {
             writeResponse(response, "Внутренняя ошибка сервера", HttpServletResponse.SC_INTERNAL_SERVER_ERROR);
-            logger.error("Неожиданная ошибка при попытке получить пользователя", e);
+            e.printStackTrace();
         }
     }
 
@@ -79,21 +67,15 @@ public class UserServlet extends HttpServlet {
      * @throws IOException при ошибках ввода/вывода.
      */
     @Override
-    public void doPost(HttpServletRequest request, HttpServletResponse response) throws IOException {
+    protected void doPost(HttpServletRequest request, HttpServletResponse response) throws IOException {
         try {
             UserDto userDto = gson.fromJson(request.getReader(), UserDto.class);
-            User user = new User(userDto.getId(), userDto.getUserName(), userDto.getEmail());
+            User user = new User(userDto.getId(), userDto.getUsername(), userDto.getEmail());
             userDao.addUser(user);
-            writeResponse(response, USER_ADDED, HttpServletResponse.SC_CREATED);
-        } catch (IOException | IllegalStateException e) {
-            logger.error("Ошибка обработки запроса", e);
-            writeResponse(response, "Ошибка обработки запроса: " + e.getMessage(), HttpServletResponse.SC_BAD_REQUEST);
+            writeResponse(response, "Пользователь успешно добавлен", HttpServletResponse.SC_CREATED);
         } catch (SQLException e) {
-            logger.error("Ошибка доступа к базе данных при создании пользователя", e);
-            writeResponse(response, ERROR_SERVER, HttpServletResponse.SC_INTERNAL_SERVER_ERROR);
-        } catch (Exception e) {
-            logger.error("Непредвиденная ошибка при создании пользователя", e);
-            writeResponse(response, ERROR_SERVER, HttpServletResponse.SC_INTERNAL_SERVER_ERROR);
+            writeResponse(response, "Внутренняя ошибка сервера", HttpServletResponse.SC_INTERNAL_SERVER_ERROR);
+            e.printStackTrace();
         }
     }
 
@@ -106,21 +88,15 @@ public class UserServlet extends HttpServlet {
      * @throws IOException при ошибках ввода/вывода.
      */
     @Override
-    public void doPut(HttpServletRequest request, HttpServletResponse response) throws IOException {
+    protected void doPut(HttpServletRequest request, HttpServletResponse response) throws IOException {
         try {
             UserDto userDto = gson.fromJson(request.getReader(), UserDto.class);
-            User user = new User(userDto.getId(), userDto.getUserName(), userDto.getEmail());
+            User user = new User(userDto.getId(), userDto.getUsername(), userDto.getEmail());
             userDao.updateUser(user);
-            writeResponse(response, USER_UPDATED, HttpServletResponse.SC_OK);
-        } catch (IOException | IllegalStateException e) {
-            logger.error("Ошибка обработки запроса", e);
-            writeResponse(response, "Ошибка обработки запроса: " + e.getMessage(), HttpServletResponse.SC_BAD_REQUEST);
+            writeResponse(response, "Пользователь успешно обновлен", HttpServletResponse.SC_OK);
         } catch (SQLException e) {
-            logger.error("Ошибка доступа к базе данных во время обновления пользователя", e);
-            writeResponse(response, ERROR_SERVER, HttpServletResponse.SC_INTERNAL_SERVER_ERROR);
-        } catch (Exception e) {
-            logger.error("Неожиданная ошибка во время обновления пользователя", e);
-            writeResponse(response, ERROR_SERVER, HttpServletResponse.SC_INTERNAL_SERVER_ERROR);
+            writeResponse(response, "Внутренняя ошибка сервера", HttpServletResponse.SC_INTERNAL_SERVER_ERROR);
+            e.printStackTrace();
         }
     }
 
@@ -133,21 +109,14 @@ public class UserServlet extends HttpServlet {
      * @throws IOException при ошибках ввода/вывода.
      */
     @Override
-    public void doDelete(HttpServletRequest request, HttpServletResponse response) throws IOException {
+    protected void doDelete(HttpServletRequest request, HttpServletResponse response) throws IOException {
         String userId = request.getParameter("id");
         try {
-            int id = Integer.parseInt(userId);
-            userDao.deleteUser(id);
-            writeResponse(response, USER_DELETED, HttpServletResponse.SC_OK);
-        } catch (NumberFormatException e) {
-            logger.error("Неверный формат идентификатора пользователя", e);
-            writeResponse(response, "Неверный формат идентификатора пользователя", HttpServletResponse.SC_BAD_REQUEST);
+            userDao.deleteUser(Integer.parseInt(userId));
+            writeResponse(response, "Пользователь успешно удален", HttpServletResponse.SC_OK);
         } catch (SQLException e) {
-            logger.error("Ошибка доступа к базе данных при удалении пользователя", e);
-            writeResponse(response, ERROR_SERVER, HttpServletResponse.SC_INTERNAL_SERVER_ERROR);
-        } catch (Exception e) {
-            logger.error("Непредвиденная ошибка при удалении пользователя", e);
-            writeResponse(response, ERROR_SERVER, HttpServletResponse.SC_INTERNAL_SERVER_ERROR);
+            writeResponse(response, "Внутренняя ошибка сервера", HttpServletResponse.SC_INTERNAL_SERVER_ERROR);
+            e.printStackTrace();
         }
     }
 }
